# RaiseYourSword

./: README.md  pyproject.toml  tasks.py
documentation/: architecture.md  changelog.md  specification.md  testing_document.md  timetracking.md  usage.md  user_manual.md
laskarit/: viikko1.md
laskarit/viikko3/: hsl_sekvenssikaavio.md  monopoli_luokkakaavio.md
src/: animation_set.py  arrow_keys.py  attack_animation.py  character.py  character_animation.py  character_direction.py  clock.py  config.py  config.yaml  direction.py  event_queue.py  events.py  facing_direction.py  game.py  game_loop.py  index.py  movement_direction.py  player_direction.py  renderer.py  state.py  utils.py
src/ai/: attack_state.py  dead_state.py  dying_state.py  idle_state.py  perpetual_idle_state.py  walk_state.py
src/animation/: animation.py  animation_set.py  attack_animation.py  character_animation.py  utils.py
src/assets/: character_skeleton_animations.yaml  character_warrior_animations.yaml
src/components/: animations_component.py  enemy_animations.py  enemy_physics.py  physics_component.py  player_animations.py  player_physics.py
src/configuration/: ai_config.py  game_config.py  graphics_config.py  spawning_config.py  utils.py
src/direction/: character_direction.py  player_direction.py
src/game/: arrow_keys.py  background.py  character.py  character_creation.py  config.py  custom_sprite.py  enemy_spawner.py  events.py  game.py  game_loop.py  graphics_utils.py
src/sprites/: background.py  character.py  enemy.py  player.py
src/states/: attack_state.py  dying_state.py  (+3 more)
(+34 files in other folders)
