[tool.poetry]
name = "raise-your-sword"
version = "0.1.0"
description = ""
authors = ["Ville Sirviö <VSirvio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
invoke = "^2.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.0"
pylint = "^3.3.6"
pytest-subtests = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
